# SpecTemplate

./: CMakeLists.txt  README.md
cmake/: OpenCVUtils.cmake  common.cmake  functions.cmake
src/common/: const_common.h
src/common/config/json/: configjson.cpp  configjson.h
src/common/encrypt/boringssl/: specssl.cpp  specssl.h
src/common/file/: fileadapter.cpp  fileadapter.h
src/common/i/: data_decor.h  idatacallback.h  ilog.h
src/common/i/itasks/: itask1.h
src/common/log/speclog/: speclog.cpp  speclog.h
src/common/system/linux/: linuxsystem.cpp  linuxsystem.h
src/common/tools/: spec_os.cpp  spec_os.h  specjson.h  specstack.h  specstatic.h
src/main_gui/: CMakeLists.txt  gui_res.qrc
src/main_gui/src/: main_gui.cpp  presenter.cpp  presenter.h
src/main_gui/src/gui/: mainwindow.cc  mainwindow.h
src/main_gui/src/gui/guitools/: coreicons.cpp
src/main_gui/src/gui/widgets/: customview.cpp  customview.h
src/main_service/: CMakeLists.txt
src/main_service/cmake/: prepare.cmake
src/main_service/src/: main.cpp
src/main_test/: CMakeLists.txt
src/main_test/cmake/: prepare.cmake
src/main_test/src/: testsuite.cpp  testsuite.h
src/main_test/src/client/: testclient.cpp  testclient.h
src/main_test/test/: example_add.cpp  example_subtract.cpp
src/main_test/test_exe/: test_exe.cpp
